--- a/converter.css
+++ b/converter.css
@@ -102,8 +102,8 @@ a{
  
   color : cyan;
   
-  max-width : 500px;
   width : auto;
+  max-width: 500px;
   border-radius: 10px;
   box-shadow: 2px 2px 5px cyan,
               -2px -2px 5px cyan,
@@ -111,9 +111,8 @@ a{
               2px -2px 5px cyan;
   
   font-size: 35px;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  text-align: center;
+  margin-left: 10px;
+  margin-right: 10px;
   
 
 }
