--- a/converter.css
+++ b/converter.css
@@ -9,6 +9,8 @@ body{
   background-color: black;
   font-family: Merienda, serif;
   color : cyan;
+  border : 2px solid red;
+  min-width : 200px;
 
 }
 .name{
