--- a/converter.css
+++ b/converter.css
@@ -9,12 +9,12 @@ body{
   background-color: black;
   font-family: Merienda, serif;
   color : cyan;
+  
 
 }
 .name{
   font-size: 20px;
-  margin : 50px;
-  margin-top: 50px;
+  
   
 }
 .nameapp{
@@ -31,11 +31,17 @@ body{
   
   color : cyan;
   border-radius: 2px;
-  height : 50px;
+  height : auto;
   font-size: 20px;
   border-bottom: 3px solid cyan;
  
   
+}
+
+.logo{
+  
+  height : auto;
+  margin-left: 30px;
 }
 .socialmedia{
   display : flex;
@@ -55,7 +61,6 @@ body{
   display: flex;
   justify-content: center;
   padding : 0;
-  
   height : auto;
   
 }
@@ -74,8 +79,6 @@ a{
   box-shadow: 4px 4px 5px black;
   box-shadow: -4px -4px 5px black;
   border-radius: 10px;
-  
-  
   
   
   box-shadow: 2px 2px 5px cyan,
@@ -113,6 +116,7 @@ a{
   font-size: 35px;
   margin-left: 30px;
   margin-right: 10px;
+  
   
 
 }
