--- a/converter.css
+++ b/converter.css
@@ -5,6 +5,9 @@
   padding : 0;
   box-sizing: border-box;
 }
+.work{
+  height : auto;
+}
 body{
   background-color: black;
   font-family: Merienda, serif;
