--- a/converter.css
+++ b/converter.css
@@ -226,7 +226,7 @@ input{
   justify-content: center;
 }
 #texttime{
-  height : 50px;
+  height : auto;
   width : auto;
   color : cyan;
   font-size: 24px;
