--- a/converter.css
+++ b/converter.css
@@ -5,15 +5,15 @@
   padding : 0;
   box-sizing: border-box;
 }
-.work{
-  height : auto;
-}
 body{
   background-color: black;
   font-family: Merienda, serif;
   color : cyan;
   
 
+}
+.work{
+  height : auto;
 }
 .name{
   font-size: 20px;
@@ -23,6 +23,7 @@ body{
 .nameapp{
   border-bottom: 2px solid cyan;
   width : auto;
+  margin-bottom: 20px;
   
   
 }
@@ -146,9 +147,7 @@ a{
   font-size: 15px;
   margin-left: 5px;
 }
-#texttime{
-  height : auto;
-}
+
 .text{
   margin-bottom: 40px;
 }
@@ -157,7 +156,7 @@ a{
   margin-left: 30px;
   margin-bottom : 15px;
   border-bottom: 2px solid white ;
-  width : 220px;
+  width : 230px;
   
 }
 .myform{
